--- a/index.html
+++ b/index.html
@@ -20,106 +20,106 @@
         </div>
         <hr>
         <div id="container">
-                <div id="myid1" class="num"><p>1</p></div>
-                <div id="myid2" class="num"><p>2</p></div>
-                <div id="myid3" class="Fizz"><p>Fizz</p></div>
-                <div id="myid4" class="num"><p>4</p></div>
-                <div id="myid5" class="Buzz"><p>Buzz</p></div>
-                <div id="myid6" class="Fizz"><p>Fizz</p></div>
-                <div id="myid7" class="num"><p>7</p></div>
-                <div id="myid8" class="num"><p>8</p></div>
-                <div id="myid9" class="Fizz"><p>Fizz</p></div>
-                <div id="myid10" class="Buzz"><p>Buzz</p></div>
-                <div id="myid11" class="num"><p>11</p></div>
-                <div id="myid12" class="Fizz"><p>Fizz</p></div>
-                <div id="myid13" class="num"><p>13</p></div>
-                <div id="myid14" class="num"><p>14</p></div>
-                <div id="myid15" class="FizzBuzz"><p>FizzBuzz</p></div>
-                <div id="myid16" class="num"><p>16</p></div>
-                <div id="myid17" class="num"><p>17</p></div>
-                <div id="myid18" class="Fizz"><p>Fizz</p></div>
-                <div id="myid19" class="num"><p>19</p></div>
-                <div id="myid20" class="Buzz"><p>Buzz</p></div>
-                <div id="myid21" class="Fizz"><p>Fizz</p></div>
-                <div id="myid22" class="num"><p>22</p></div>
-                <div id="myid23" class="num"><p>23</p></div>
-                <div id="myid24" class="Fizz"><p>Fizz</p></div>
-                <div id="myid25" class="Buzz"><p>Buzz</p></div>
-                <div id="myid26" class="num"><p>26</p></div>
-                <div id="myid27" class="Fizz"><p>Fizz</p></div>
-                <div id="myid28" class="num"><p>28</p></div>
-                <div id="myid29" class="num"><p>29</p></div>
-                <div id="myid30" class="FizzBuzz"><p>FizzBuzz</p></div>
-                <div id="myid31" class="num"><p>31</p></div>
-                <div id="myid32" class="num"><p>32</p></div>
-                <div id="myid33" class="Fizz"><p>Fizz</p></div>
-                <div id="myid34" class="num"><p>34</p></div>
-                <div id="myid35" class="Buzz"><p>Buzz</p></div>
-                <div id="myid36" class="Fizz"><p>Fizz</p></div>
-                <div id="myid37" class="num"><p>37</p></div>
-                <div id="myid38" class="num"><p>38</p></div>
-                <div id="myid39" class="Fizz"><p>Fizz</p></div>
-                <div id="myid40" class="Buzz"><p>Buzz</p></div>
-                <div id="myid41" class="num"><p>41</p></div>
-                <div id="myid42" class="Fizz"><p>Fizz</p></div>
-                <div id="myid43" class="num"><p>43</p></div>
-                <div id="myid44" class="num"><p>44</p></div>
-                <div id="myid45" class="FizzBuzz"><p>FizzBuzz</p></div>
-                <div id="myid46" class="num"><p>46</p></div>
-                <div id="myid47" class="num"><p>47</p></div>
-                <div id="myid48" class="Fizz"><p>Fizz</p></div>
-                <div id="myid49" class="num"><p>49</p></div>
-                <div id="myid50" class="Buzz"><p>Buzz</p></div>
-                <div id="myid51" class="Fizz"><p>Fizz</p></div>
-                <div id="myid52" class="num"><p>52</p></div>
-                <div id="myid53" class="num"><p>53</p></div>
-                <div id="myid54" class="Fizz"><p>Fizz</p></div>
-                <div id="myid55" class="Buzz"><p>Buzz</p></div>
-                <div id="myid56" class="num"><p>56</p></div>
-                <div id="myid57" class="Fizz"><p>Fizz</p></div>
-                <div id="myid58" class="num"><p>58</p></div>
-                <div id="myid59" class="num"><p>59</p></div>
-                <div id="myid60" class="FizzBuzz"><p>FizzBuzz</p></div>
-                <div id="myid61" class="num"><p>61</p></div>
-                <div id="myid62" class="num"><p>62</p></div>
-                <div id="myid63" class="Fizz"><p>Fizz</p></div>
-                <div id="myid64" class="num"><p>64</p></div>
-                <div id="myid65" class="Buzz"><p>Buzz</p></div>
-                <div id="myid66" class="Fizz"><p>Fizz</p></div>
-                <div id="myid67" class="num"><p>67</p></div>
-                <div id="myid68" class="num"><p>68</p></div>
-                <div id="myid69" class="Fizz"><p>Fizz</p></div>
-                <div id="myid70" class="Buzz"><p>Buzz</p></div>
-                <div id="myid71" class="num"><p>71</p></div>
-                <div id="myid72" class="Fizz"><p>Fizz</p></div>
-                <div id="myid73" class="num"><p>73</p></div>
-                <div id="myid74" class="num"><p>74</p></div>
-                <div id="myid75" class="FizzBuzz"><p>FizzBuzz</p></div>
-                <div id="myid76" class="num"><p>76</p></div>
-                <div id="myid77" class="num"><p>77</p></div>
-                <div id="myid78" class="Fizz"><p>Fizz</p></div>
-                <div id="myid79" class="num"><p>79</p></div>
-                <div id="myid80" class="Buzz"><p>Buzz</p></div>
-                <div id="myid81" class="Fizz"><p>Fizz</p></div>
-                <div id="myid82" class="num"><p>82</p></div>
-                <div id="myid83" class="num"><p>83</p></div>
-                <div id="myid84" class="Fizz"><p>Fizz</p></div>
-                <div id="myid85" class="Buzz"><p>Buzz</p></div>
-                <div id="myid86" class="num"><p>86</p></div>
-                <div id="myid87" class="Fizz"><p>Fizz</p></div>
-                <div id="myid88" class="num"><p>88</p></div>
-                <div id="myid89" class="num"><p>89</p></div>
-                <div id="myid90" class="FizzBuzz"><p>FizzBuzz</p></div>
-                <div id="myid91" class="num"><p>91</p></div>
-                <div id="myid92" class="num"><p>92</p></div>
-                <div id="myid93" class="Fizz"><p>Fizz</p></div>
-                <div id="myid94" class="num"><p>94</p></div>
-                <div id="myid95" class="Buzz"><p>Buzz</p></div>
-                <div id="myid96" class="Fizz"><p>Fizz</p></div>
-                <div id="myid97" class="num"><p>97</p></div>
-                <div id="myid98" class="num"><p>98</p></div>
-                <div id="myid99" class="Fizz"><p>Fizz</p></div>
-                <div id="myid100" class="Buzz"><p>Buzz</p></div>   
+                <div id="myid_1" class="num"><p>1</p></div>
+                <div id="myid_2" class="num"><p>2</p></div>
+                <div id="myid_3" class="Fizz"><p>Fizz</p></div>
+                <div id="myid_4" class="num"><p>4</p></div>
+                <div id="myid_5" class="Buzz"><p>Buzz</p></div>
+                <div id="myid_6" class="Fizz"><p>Fizz</p></div>
+                <div id="myid_7" class="num"><p>7</p></div>
+                <div id="myid_8" class="num"><p>8</p></div>
+                <div id="myid_9" class="Fizz"><p>Fizz</p></div>
+                <div id="myid_10" class="Buzz"><p>Buzz</p></div>
+                <div id="myid_11" class="num"><p>11</p></div>
+                <div id="myid_12" class="Fizz"><p>Fizz</p></div>
+                <div id="myid_13" class="num"><p>13</p></div>
+                <div id="myid_14" class="num"><p>14</p></div>
+                <div id="myid_15" class="FizzBuzz"><p>FizzBuzz</p></div>
+                <div id="myid_16" class="num"><p>16</p></div>
+                <div id="myid_17" class="num"><p>17</p></div>
+                <div id="myid_18" class="Fizz"><p>Fizz</p></div>
+                <div id="myid_19" class="num"><p>19</p></div>
+                <div id="myid_20" class="Buzz"><p>Buzz</p></div>
+                <div id="myid_21" class="Fizz"><p>Fizz</p></div>
+                <div id="myid_22" class="num"><p>22</p></div>
+                <div id="myid_23" class="num"><p>23</p></div>
+                <div id="myid_24" class="Fizz"><p>Fizz</p></div>
+                <div id="myid_25" class="Buzz"><p>Buzz</p></div>
+                <div id="myid_26" class="num"><p>26</p></div>
+                <div id="myid_27" class="Fizz"><p>Fizz</p></div>
+                <div id="myid_28" class="num"><p>28</p></div>
+                <div id="myid_29" class="num"><p>29</p></div>
+                <div id="myid_30" class="FizzBuzz"><p>FizzBuzz</p></div>
+                <div id="myid_31" class="num"><p>31</p></div>
+                <div id="myid_32" class="num"><p>32</p></div>
+                <div id="myid_33" class="Fizz"><p>Fizz</p></div>
+                <div id="myid_34" class="num"><p>34</p></div>
+                <div id="myid_35" class="Buzz"><p>Buzz</p></div>
+                <div id="myid_36" class="Fizz"><p>Fizz</p></div>
+                <div id="myid_37" class="num"><p>37</p></div>
+                <div id="myid_38" class="num"><p>38</p></div>
+                <div id="myid_39" class="Fizz"><p>Fizz</p></div>
+                <div id="myid_40" class="Buzz"><p>Buzz</p></div>
+                <div id="myid_41" class="num"><p>41</p></div>
+                <div id="myid_42" class="Fizz"><p>Fizz</p></div>
+                <div id="myid_43" class="num"><p>43</p></div>
+                <div id="myid_44" class="num"><p>44</p></div>
+                <div id="myid_45" class="FizzBuzz"><p>FizzBuzz</p></div>
+                <div id="myid_46" class="num"><p>46</p></div>
+                <div id="myid_47" class="num"><p>47</p></div>
+                <div id="myid_48" class="Fizz"><p>Fizz</p></div>
+                <div id="myid_49" class="num"><p>49</p></div>
+                <div id="myid_50" class="Buzz"><p>Buzz</p></div>
+                <div id="myid_51" class="Fizz"><p>Fizz</p></div>
+                <div id="myid_52" class="num"><p>52</p></div>
+                <div id="myid_53" class="num"><p>53</p></div>
+                <div id="myid_54" class="Fizz"><p>Fizz</p></div>
+                <div id="myid_55" class="Buzz"><p>Buzz</p></div>
+                <div id="myid_56" class="num"><p>56</p></div>
+                <div id="myid_57" class="Fizz"><p>Fizz</p></div>
+                <div id="myid_58" class="num"><p>58</p></div>
+                <div id="myid_59" class="num"><p>59</p></div>
+                <div id="myid_60" class="FizzBuzz"><p>FizzBuzz</p></div>
+                <div id="myid_61" class="num"><p>61</p></div>
+                <div id="myid_62" class="num"><p>62</p></div>
+                <div id="myid_63" class="Fizz"><p>Fizz</p></div>
+                <div id="myid_64" class="num"><p>64</p></div>
+                <div id="myid_65" class="Buzz"><p>Buzz</p></div>
+                <div id="myid_66" class="Fizz"><p>Fizz</p></div>
+                <div id="myid_67" class="num"><p>67</p></div>
+                <div id="myid_68" class="num"><p>68</p></div>
+                <div id="myid_69" class="Fizz"><p>Fizz</p></div>
+                <div id="myid_70" class="Buzz"><p>Buzz</p></div>
+                <div id="myid_71" class="num"><p>71</p></div>
+                <div id="myid_72" class="Fizz"><p>Fizz</p></div>
+                <div id="myid_73" class="num"><p>73</p></div>
+                <div id="myid_74" class="num"><p>74</p></div>
+                <div id="myid_75" class="FizzBuzz"><p>FizzBuzz</p></div>
+                <div id="myid_76" class="num"><p>76</p></div>
+                <div id="myid_77" class="num"><p>77</p></div>
+                <div id="myid_78" class="Fizz"><p>Fizz</p></div>
+                <div id="myid_79" class="num"><p>79</p></div>
+                <div id="myid_80" class="Buzz"><p>Buzz</p></div>
+                <div id="myid_81" class="Fizz"><p>Fizz</p></div>
+                <div id="myid_82" class="num"><p>82</p></div>
+                <div id="myid_83" class="num"><p>83</p></div>
+                <div id="myid_84" class="Fizz"><p>Fizz</p></div>
+                <div id="myid_85" class="Buzz"><p>Buzz</p></div>
+                <div id="myid_86" class="num"><p>86</p></div>
+                <div id="myid_87" class="Fizz"><p>Fizz</p></div>
+                <div id="myid_88" class="num"><p>88</p></div>
+                <div id="myid_89" class="num"><p>89</p></div>
+                <div id="myid_90" class="FizzBuzz"><p>FizzBuzz</p></div>
+                <div id="myid_91" class="num"><p>91</p></div>
+                <div id="myid_92" class="num"><p>92</p></div>
+                <div id="myid_93" class="Fizz"><p>Fizz</p></div>
+                <div id="myid_94" class="num"><p>94</p></div>
+                <div id="myid_95" class="Buzz"><p>Buzz</p></div>
+                <div id="myid_96" class="Fizz"><p>Fizz</p></div>
+                <div id="myid_97" class="num"><p>97</p></div>
+                <div id="myid_98" class="num"><p>98</p></div>
+                <div id="myid_99" class="Fizz"><p>Fizz</p></div>
+                <div id="myid_100" class="Buzz"><p>Buzz</p></div>   
         </div>
     </main>
     <hr>
